--- a/temporary/s.css
+++ b/temporary/s.css
@@ -10,7 +10,7 @@ header {
 }
 header .foto-perfil {
     width: 102px;
-    height: auto;
+    height: 102px;
     border-radius: 100%;
 }
 .chamada {
@@ -67,7 +67,7 @@ footer a:hover {
     }
     header .foto-perfil {
         width: 80px;
-        height: auto;
+        height: 80px;
         border-radius: 100%;
     }
     .chamada h1, .chamada p {
