--- a/temporary/s.css
+++ b/temporary/s.css
@@ -2,16 +2,38 @@ body {
     background-color: #FF6768;
     color: #fff;
 }
+*:hover {
+    text-decoration: none;
+}
 header {
     width: 100%;
     margin: 10rem 0 5rem 0;
     display: flex;
     justify-content: space-between;
+    align-items: center;
+}
+header .logo {
+    width: 60px;
+    height: 64px;
+}
+header .foto-perfil-wrap {
+    max-width: 150px;
+    padding: 1.5rem;
+    position: relative;
+    background: linear-gradient(to bottom, #FF6768, #FFC8C8);
+    padding: 3px;
+    border-radius: 100%;
+    transition: transform .5s;
+}
+header .foto-perfil-wrap:hover {
+    transform: scale(1.1);
 }
 header .foto-perfil {
     width: 102px;
     height: 102px;
     border-radius: 100%;
+    background-image: url('assets/foto_bq_medias_6.jpg');
+    background-size: cover;
 }
 .chamada {
     width: 100%;
@@ -65,6 +87,10 @@ footer a:hover {
     header {
         margin: 3rem 0 2rem 0;
     }
+    header .logo {
+        width: 45px;
+        height: 48px;
+    }
     header .foto-perfil {
         width: 80px;
         height: 80px;
@@ -72,7 +98,7 @@ footer a:hover {
     }
     .chamada h1, .chamada p {
         font-family: 'Roboto';
-        font-size: 24px;
+        font-size: 22px;
         font-weight: 400;
         line-height: 150%;
     }
@@ -83,9 +109,9 @@ footer a:hover {
         font-family: 'Roboto';
         font-size: 18px;
         font-weight: 300;
+        margin-bottom: 2rem;
     }
     footer ul li {
-        display: block;
         margin-right: 1.5rem;
         font-family: 'Roboto';
         font-size: 18px;
