--- a/v1/scss/_general.scss
+++ b/v1/scss/_general.scss
@@ -8,6 +8,9 @@
     padding: 0;
     overflow: hidden;
 }
+body {
+    padding: 1rem;
+}
 // Header
 header.container-fluid {
     display: flex;
@@ -125,5 +128,128 @@ header.container-fluid {
                 text-transform: uppercase;
             }
         }
+    }
+}
+// Profile
+#profile {
+    background-color: rgba($color-gray_100, .2);
+    border-radius: 4px;
+    .author {
+        display: flex;
+        justify-content:first baseline;
+        align-items: center;
+        margin: 2rem 0 1rem 0;
+        .foto-perfil-wrap {
+            @include width(108px);
+            @include height(108px);
+            position: relative;
+            background: linear-gradient(to bottom, #FF6768, #FFC8C8);
+            padding: 3px;
+            border-radius: 100%;
+            margin-right: 1rem;
+        }
+        .foto-perfil {
+            width: 102px;
+            height: 102px;
+            border-radius: 100%;
+            background-image: url('../assets/img/foto_bq_medias_6.jpg');
+            background-size: cover;
+        }
+        h2 {
+            @include fontSize(32px);
+            font-family: 'Montserrat', sans-serif;
+            font-weight: 500;
+            color: $color-secondary;
+            text-transform: uppercase;
+        }
+    }
+    p {
+        @include fontSize(18px);
+        font-family: 'Montserrat', sans-serif;
+        font-weight: 300;
+        color: $color_gray-200;
+        line-height: 180%;
+        margin-bottom: 2rem;
+    }
+    .content-list {
+        h3 {
+            @include fontSize(20px);
+            font-family: 'Montserrat', sans-serif;
+            font-weight: 500;
+            color: $color-secondary;
+            text-transform: uppercase;
+            margin-bottom: 1.5rem;
+        }
+        ul {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+            li {
+                margin-bottom: 1rem;
+                @include fontSize(16px);
+                font-family: 'Montserrat', sans-serif;
+                font-weight: 500;
+                color: $color-secondary;
+            }
+        }
+    }
+    .social-media {
+        margin-bottom: 2rem;
+        ul {
+            list-style: none;
+            margin: 0;
+            padding: 0;
+            li {
+                margin-right: 1rem;
+                @include fontSize(16px);
+                font-family: 'Montserrat', sans-serif;
+                font-weight: 400;
+                letter-spacing: .5rem;
+                text-transform: uppercase;
+                float: left;
+                a {
+                    color: $color_gray-200;
+                    &:hover {
+                        text-decoration: none;
+                    }
+                }
+            }
+        }
+    }
+}
+//Rodape
+footer {
+    .contact {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 10rem;
+        h2 {
+            @include fontSize(40px);
+            font-family: 'Montserrat', sans-serif;
+            font-weight: 700;
+            color: $color-secondary;
+            text-transform: uppercase;
+        }
+        a {
+            @include fontSize(16px);
+            font-family: 'Montserrat', sans-serif;
+            font-weight: 400;
+            letter-spacing: .5rem;
+            text-transform: uppercase;
+            color: $color_gray-200;
+            &:hover {
+                text-decoration: none;
+            }
+        }
+    }
+    .year {
+        @include fontSize(12px);
+        font-family: 'Montserrat', sans-serif;
+        font-weight: 400;
+        letter-spacing: .5rem;
+        text-transform: uppercase;
+        color: $color-gray_300;
+        margin-bottom: 3rem;
     }
 }
