--- a/v1/scss/_general.scss
+++ b/v1/scss/_general.scss
@@ -1,8 +1,10 @@
 @import 'guide';
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,900;1,700&display=swap');
-// ::selection {
-    
-// }
+@import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
+::selection {
+    background: $color-primary;
+    color: $color-white;
+}
 .container-fluid {
     margin: 0;
     padding: 0;
@@ -120,6 +122,11 @@ header.container-fluid {
             margin-bottom: 1rem;
         }
         .job-link {
+            @include width(500px);
+            display: flex;
+            justify-content: space-between;
+            align-content: center;
+            align-items: center;
             h3 {
                 @include fontSize(24px);
                 font-family: 'Montserrat', sans-serif;
@@ -127,12 +134,30 @@ header.container-fluid {
                 color: $color-secondary;
                 text-transform: uppercase;
             }
+            a {
+                @include width(40px);
+                @include height(40px);
+                background-color: $color-primary;
+                border-radius: 100%;
+                display: flex;
+                justify-content: center;
+                align-content:center;
+                align-items: center;
+                &:hover {
+                    text-decoration: none;
+                }
+                &::after {
+                    content: '\f061';
+                    font-family: FontAwesome;
+                    color: $color-white;
+                }
+            }
         }
     }
 }
 // Profile
 #profile {
-    background-color: rgba($color-gray_100, .2);
+    background-color: rgba(#f6f4f4, 1);
     border-radius: 4px;
     .author {
         display: flex;
@@ -184,17 +209,24 @@ header.container-fluid {
             list-style: none;
             padding: 0;
             margin: 0;
-            li {
+            li, h4 {
                 margin-bottom: 1rem;
                 @include fontSize(16px);
                 font-family: 'Montserrat', sans-serif;
                 font-weight: 500;
                 color: $color-secondary;
+                .job-atual {
+                    background: $color-primary;
+                    padding: .3rem;
+                    color: $color-white;
+                    @include fontSize(14px);
+                    border-radius: 4px;
+                }
             }
         }
     }
     .social-media {
-        margin-bottom: 2rem;
+        margin: 3rem 0 2rem 0;
         ul {
             list-style: none;
             margin: 0;
@@ -209,8 +241,15 @@ header.container-fluid {
                 float: left;
                 a {
                     color: $color_gray-200;
+                    @include transition(all 0.3s ease-in-out 0s);
                     &:hover {
                         text-decoration: none;
+                        color: $color-primary;
+                    }
+                    &::after {
+                        content: '\f061';
+                        font-family: FontAwesome;
+                        color: $color-secondary;
                     }
                 }
             }
@@ -238,8 +277,15 @@ footer {
             letter-spacing: .5rem;
             text-transform: uppercase;
             color: $color_gray-200;
+            @include transition(all 0.3s ease-in-out 0s);
             &:hover {
                 text-decoration: none;
+                color: $color-primary;
+            }
+            &::after {
+                content: '\f061';
+                font-family: FontAwesome;
+                color: $color-secondary;
             }
         }
     }
