--- a/v1/scss/_guide.scss
+++ b/v1/scss/_guide.scss
@@ -49,6 +49,38 @@ $color-gray_300: rgba(46,49,49, 1);
 }
 
 // Components
+%text-content {
+    @include fontSize(18px);
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 300;
+    color: $color_gray-200;
+    line-height: 180%;
+}
+%social-link {
+    @include fontSize(16px);
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    letter-spacing: .5rem;
+    text-transform: uppercase;
+    color: $color_gray-200;
+    @include transition(all 0.3s ease-in-out 0s);
+    &:hover {
+        text-decoration: none;
+        color: $color-primary;
+    }
+    &::after {
+        content: '\f061';
+        font-family: FontAwesome;
+        color: $color-secondary;
+    }
+}
+%subtitle-base {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
+    color: $color-secondary;
+    text-transform: uppercase;
+}
+
 // %btn-structure {
 //     padding: .5rem 1rem;
 //     border-radius: 4rem;
