--- a/v1/scss/_guide.scss
+++ b/v1/scss/_guide.scss
@@ -74,11 +74,30 @@ $color-gray_300: rgba(46,49,49, 1);
         color: $color-secondary;
     }
 }
+%title-base {
+    @include fontSize(40px);
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 900;
+    color: $color-secondary;
+    text-transform: uppercase;
+    line-height: 120%;
+    letter-spacing: 2px;
+}
 %subtitle-base {
     font-family: 'Montserrat', sans-serif;
     font-weight: 500;
     color: $color-secondary;
     text-transform: uppercase;
+}
+%icon-before {
+    @include width(48px);
+    @include height(48px);
+    background-color: rgba($color-primary, 0.16);
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 100%;
 }
 
 // %btn-structure {
