--- a/v1/scss/_guide.scss
+++ b/v1/scss/_guide.scss
@@ -53,7 +53,7 @@ $color-gray_300: rgba(46,49,49, 1);
     @include fontSize(18px);
     font-family: 'Montserrat', sans-serif;
     font-weight: 300;
-    color: $color_gray-200;
+    color: $color_gray-300;
     line-height: 180%;
     @media (max-width: 575px) {
         @include fontSize(16px);
@@ -87,6 +87,9 @@ $color-gray_300: rgba(46,49,49, 1);
     letter-spacing: 2px;
     @media (max-width: 767px) {
         @include fontSize(28px);
+    }
+    @media (max-width: 375px) {
+        @include fontSize(24px);
     }
 }
 %subtitle-base {
